# sradg-symbolic-ai

./: README.md
code/: Reconciliation.xlsx  metadata.txt  pyproject.toml
code/output/: finalReport.md  reviewComments.md
code/src/reconciliationflow/: main.py  reconciliation_flow.html
code/src/reconciliationflow/crews/anomaly_detection/: anomaly_detection.py
code/src/reconciliationflow/crews/anomaly_detection/config/: agents.yaml  tasks.yaml
code/src/reconciliationflow/crews/anomaly_review/: anomaly_review.py
code/src/reconciliationflow/crews/anomaly_review/config/: agents.yaml  tasks.yaml
code/src/reconciliationflow/crews/report_summary/: report_summary.py
code/src/reconciliationflow/crews/report_summary/config/: agents.yaml  tasks.yaml
